manifests/base/patternfly-app-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: patternfly-app
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: patternfly-app
    weight: 100
  wildcardPolicy: None
